--- a/app/templates/create_user.html
+++ b/app/templates/create_user.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-
+    {% if msj | length > 1 %}
+        <div class="alert alert-{{ type_alert}} alert-dismissible fade show" role="alert">
+            <strong>{{ msj }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endif %}
     <h1 class="text-center">Formulario para crear usuario</h1>
 
     <form method="POST">
