--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>Holas</h3>
+<h3>Bienvenido</h3>
 <a href="/register">Crear usuario</a>
 
 {% endblock %}
