implemente login y guardar token en cookies

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,5 +3,9 @@
 
 <h3>Bienvenido</h3>
 <a href="/register">Crear usuario</a>
+<a href="/login_web">Login</a>
+<a href="/mostrar_usuarios">Mostrar Usuarios</a>
+<a href="/salir">Salir</a>
+
 
 {% endblock %}
